# qa_automation_ui_and_api

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
endpoints/: pet_api.py  user_api.py
pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_page_1.py  checkout_page_2.py  login_page.py  product_details_page.py  products_page.py
tests/: conftest.py
tests/api/: test_pet.py  test_user.py
tests/ui/: test_login_page.py  test_navigation.py  test_products_and_cart.py
